1.15 -> 1.16:
    - make distcheck is now squeaky clean.
    - permit VPATH builds.
    - add shallow tests using ISP/RAS api-sanity-autotest.pl.
    - prefix bit set routines with popt to avoid symbol coolisions w rpm.
    - add tdict.c to exercise popt bit sets against /usr/dict/words.
    - add poptBitsArgs() method to generate args bit set.
    - add methods for bit set union and intersection.
    - permit comma separated attribute lists, handle negated attributes.
    - better test for POPT_ARG_BITSET.
    - add POPT_ARG_BITSET handling.
    - add POPT_ARG_SHORT handling.
    - handle all callback traversals within a C switch (for extendability ease).
    - add popt.pc.
    - devzero2000: add AC_CONFIG_AUX_DIR, AC_CONFIG_MACRO_DIR to configure. Create build-aux 
    - devzero2000: del acinclude.m4 : AC_CHECK_VA_COPY is not used
1.14 -> 1.15:
    - release popt-1.15.
    - rse: fix building under --disable-nls
    - rse: fix building under non GLIBC platforms where glob_pattern_p fallback has to be used
    - rse: fix building under platforms where FNM_EXTMATCH is not available
    - jbj: poptReadFile: permit NULL if return values are not desired.
    - jbj: poptReadFile: add routine.
    - jbj: trim out escaped newline(s) from file content, other fixes.
    - jbj: permit popt alias/exec to include content from a file.
    - jbj: permit glob(3) patterns in appName field of popt alias/exec config.
    - jbj: add test cases for bit operations and toggles.
    - jbj: avoid displaying --[no]nofoo with POPT_ARGFLAG_TOGGLE.
    - jbj: add poptArgInfo() to get argInfo, implementing POPT_ARGFLAG_TOGGLE.
    - jbj: add longOptionStrcmp() to match w POPT_ARGFLAG_TOGGLE.
    - jbj: change singleDash arg to a bit enum, use LF_ISSET(ONEDASH) instead.
    - jbj: rework the glob wrappers into something more useful. portability todo++.
    - jbj: stub in glob(3) wrappers for popt. more useful poptGlob() API next.