@@ -5,9 +5,10 @@ AUTOMAKE_OPTIONS = 1.4 foreign
 LINT =		splint
 MCCABE =	pmccabe
 
-EXTRA_DIST = config.rpath lookup3.c  autogen.sh CHANGES $(man_MANS) popt.spec \
+EXTRA_DIST = config.rpath lookup3.c  autogen.sh CHANGES $(man_MANS) \
 	footer_no_timestamp.html libpopt.vers \
 	testit.sh test-poptrc \
+	popt.xcodeproj/project.pbxproj \
 	popt.ps
 
 SUBDIRS = po . auto
